Finished java08 ex02